# MyBot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  debug.py  docker-compose.yml  main.py  mybot.excalidraw  pyproject.toml  run.bat  setting.example.toml
app/: aiohttp_tools.py  main.py
app/api/: __init__.py  client.py
app/api/mixins/: __init__.py  account.py  album.py  base.py  file.py  group.py  message.py  stream.py  system.py
app/config/: __init__.py  config.py  plugin_config.py  schemas.py
app/core/: __init__.py  di.py  dispatcher.py  event_parser.py  plugin_manager.py  server.py
app/database/: __init__.py  databasemanager.py  qqdata.py  schemas.py
app/models/: __init__.py  common.py  segments.py
app/models/api/: __init__.py  message.py  other_payload.py  payload.py
app/models/events/: __init__.py  message.py  (+5 more)
app/plugins/: __init__.py  base.py  del_database.py  deldatabase.py  hello.py  utils.py
app/services/: __init__.py
app/utils/: __init__.py  encoding.py  file_parser.py  file_type.py  files.py  log.py  message_utils.py  retry_utils.py  utils.py
config/: __init__.py  config.py  schemas.py
docs/: mybot.excalidraw  runtime_architecture.md
tests/: test_ai_group_chat_config.py  test_ai_group_chat_debug_dump.py  test_ai_group_chat_deepseek_v4_prompt.py  test_ai_group_chat_message_builder.py  test_ai_group_chat_tool_loop.py  test_llm_tools.py  test_logging.py  test_models.py  test_napcat_api_protocol.py  test_napcat_group_tools.py  test_openai_image_generation.py  test_outgoing_message_persistence.py  test_settings_config.py
(+85 files in other folders)
