[project]
name = "mybot-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dishka>=1.7.2",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "filetype>=1.2.0",
    "firecrawl-py>=4.12.0",
    "google-genai>=1.56.0",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.0",
    "radon>=6.0.1",
    "redis>=7.1.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.40.0",
    "volcengine-python-sdk[ark]>=5.0.3",
    "websockets>=15.0.1",
]
