[project]
name = "mybot-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dishka>=1.7.2",
    "fastapi>=0.128.0",
    "filetype>=1.2.0",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.40.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
]

[tool.basedpyright]
typeCheckingMode = "strict"
exclude = [
    "archived_plugins",
    ".venv",
    "data",
    "debug",
    "docs",
    "image",
    "logs",
    "plugins_config",
]
